Update the Config File

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
 social:
 - {icon: "ion-logo-twitter", link: "https://twitter.com/lucasgatsas"}
 - {icon: "ion-logo-facebook", link: "https://facebook.com"}
-- {icon: "ion-logo-youtube", link: "https://youtube.com/lucasgatsasastro"}
+- {icon: "ion-logo-youtube", link: "https://youtube.com/@lucasgatsasastro"}
 - {icon: "ion-logo-instagram", link: "https://instagram.com/lucasgatsas"}
 - {icon: "ion ion-logo-github", link: "https://github.com/spaceg"}
 
