--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ slider: true # NOTE - By default, the slider is set to display featured posts. T
 #-------------------------------
 # Contact Settings
 contact:
-  email: lucasgatsas[@]protonmail.com # Add your email for contant form
+  email: lucasgatsas@protonmail.com # Add your email for contant form
   description:  If you have any Questions, feel free to contact me. Otherwise follow my Social Media. # Add a description of your form
 
 # NOTE
@@ -54,7 +54,7 @@ google-analytics: # Add your identifier. For example UA-99631805-1.
 # Newsletter
 mailchimp: true # To enable the mailchimp form, use the value true. To turn off use the value false.
 mailchimp-text: Subscribe to our newsletter and we’ll send you the emails of latest posts. # Add your description.
-mailchimp-identifier: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
+mailchimp-identifier:  tse262728.us22.list-manage.com/subscribe/post?u=45108eb6e38b793af7d3de7a6&amp;id=397785b79c
 
 
 #-------------------------------
