--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 title: Lucas Gatsas
 logo: 'https://lucasgatsas.ch/blog/wp-content/uploads/2024/11/lucasgatsas-logo-blog.png'
 description: My Name is Lucas Gatsas, I’m a Astro + Solar Photographer based in Switzerland. I like being at the center of TSE events.
-baseurl: "" # The subpath of your site, e.g. /blog
-url: "" # The base hostname & protocol for your site, e.g. http://example.com
+baseurl: "https://lucasgatsas.com" # The subpath of your site, e.g. /blog
+url: "https://lucasgatsas.com" # The base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
