--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://lucasgatsas.com" #url: "https://lucasgatsas.com"
 
 # The subpath of your site, e.g. /blog
 # The base hostname & protocol for your site, e.g. http://example.com
-plugins:
+gems:
   - jekyll-feed
 
 #-------------------------------
